# xgb-processing

./: .bazelrc  .clang-format  .gitignore  WORKSPACE
processing/: BUILD.bazel  processor.h  processor_loader.cc
processing/plugins/: public-key  secret-key
