# Copyright 2024 Ant Group Co., Ltd
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@yacl//bazel:yacl.bzl", "yacl_cc_library", "yacl_cc_test", "yacl_cc_binary")

cc_shared_library(
    name = "heu_processor",
    shared_lib_name = "libproc_heu.so",
    deps = [":processor"],
)

yacl_cc_library(
    name = "processor",
    srcs = [
        "heu_processor.cc",
        "heu_processor.h",
        "processor.h",
    ],
    deps = [
        "@com_alipay_sf_heu//heu/library/numpy",
        "@com_google_absl//absl/strings",
    ],
)

yacl_cc_test(
    name = "processor_test",
    srcs = [
        "processor_test.cc",
        "processor_loader.cc",
        "processor.h"
    ],
    data = [
        "plugins/libproc_heu.so",
        "plugins/public-key",
        "plugins/secret-key"
    ],
)

yacl_cc_binary(
    name = "generate_key",
    srcs = ["generate_key.cc"],
    deps = [
        "@com_alipay_sf_heu//heu/library/phe",
        "@com_github_gflags_gflags//:gflags",
    ],
)
